Added Work Experience tab with ZS, Honda Cars, and Enigmatic Plodder

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Sahil Walia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="work-experience.html">Work Experience</a></li>
+        <li><a href="zs-experience.html">ZS Associates</a></li>
+    </ul>
+</nav>
+
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Welcome to my Professional portfolio</h1>
         <p>Explore my work and projects</p>
     </header>
 
