--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="work-experience.html">Work Experience</a></li>
-        <li><a href="zs-experience.html">ZS Associates</a></li>
     </ul>
 </nav>
 
@@ -22,21 +21,14 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>This is where you introduce yourself.</p>
-    </section>
-
-    <section id="projects">
-        <h2>My Projects</h2>
-        <div class="project">
-            <img src="images/project1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Project description goes here.</p>
-        </div>
+        <p>I’m a Business Analytics professional passionate about merging Business Intelligence with advanced AI and machine learning solutions.
+ With a proven track record of leading innovative BI projects—from designing Tableau-based initiatives to crafting dynamic dashboards—I consistently transform complex data into actionable insights.
+</p>
     </section>
 
     <footer>
         <h2>Contact Me</h2>
-        <p>Email: example@example.com</p>
+        <p>Email: swalia10@asu.edu | sahilwalia2598@gmail.com</p>
     </footer>
 
     <script src="script.js"></script>
