Updated landing page with profile photo, signature, and placeholders for icons

--- a/index.html
+++ b/index.html
@@ -6,31 +6,54 @@
     <title>Sahil Walia</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="work-experience.html">Work Experience</a></li>
-    </ul>
-</nav>
+    <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="work-experience.html">Work Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact Me</a></li>
+        </ul>
+    </nav>
 
-    <header>
-        <h1>Welcome to my Professional portfolio</h1>
-        <p>Explore my work and projects</p>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I’m a Business Analytics professional passionate about merging Business Intelligence with advanced AI and machine learning solutions.
- With a proven track record of leading innovative BI projects—from designing Tableau-based initiatives to crafting dynamic dashboards—I consistently transform complex data into actionable insights.
-</p>
+    <!-- Hero Section with Photo, Signature, and Description -->
+    <section id="hero">
+        <div class="hero-container">
+            <div class="hero-left">
+                <img src="images/sahil-photo.jpg" alt="Sahil Walia" class="profile-photo">
+                <img src="images/signature.png" alt="Sahil's Signature" class="signature">
+            </div>
+            <div class="hero-right">
+                <h1>Sahil Walia</h1>
+                <p>Business Analytics professional merging Business Intelligence with AI and Machine Learning solutions. Proven track record of leading innovative BI projects, crafting Tableau-based dashboards, and transforming data into actionable insights.</p>
+                <div class="social-icons">
+                    <a href="https://github.com/walia-sahil" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://linkedin.com/in/sahilwalia" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="mailto:swalia10@asu.edu"><i class="fas fa-envelope"></i></a>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer>
+    <!-- Analytics Icons Section -->
+    <section id="analytics-icons">
+        <div class="icons-container">
+            <img src="images/icon-data.png" alt="Data" class="icon">
+            <img src="images/icon-chart.png" alt="Chart" class="icon">
+            <img src="images/icon-ai.png" alt="AI" class="icon">
+            <img src="images/icon-ml.png" alt="Machine Learning" class="icon">
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <footer id="contact">
         <h2>Contact Me</h2>
-        <p>Email: swalia10@asu.edu | sahilwalia2598@gmail.com</p>
+        <p>Email: <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> | <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a></p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
