Added graphics, interactive icons, and updated landing page design

--- a/index.html
+++ b/index.html
@@ -19,40 +19,49 @@
     </nav>
 
     <!-- Hero Section with Photo, Signature, and Description -->
-    <section id="hero">
-        <div class="hero-container">
-            <div class="hero-left">
-                <img src="images/sahil-photo.jpg" alt="Sahil Walia" class="profile-photo">
-                <img src="images/signature.png" alt="Sahil's Signature" class="signature">
-            </div>
-            <div class="hero-right">
-                <h1>Sahil Walia</h1>
-                <p>Business Analytics professional merging Business Intelligence with AI and Machine Learning solutions. Proven track record of leading innovative BI projects, crafting Tableau-based dashboards, and transforming data into actionable insights.</p>
-                <div class="social-icons">
-                    <a href="https://github.com/walia-sahil" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://linkedin.com/in/sahilwalia" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="mailto:swalia10@asu.edu"><i class="fas fa-envelope"></i></a>
-                </div>
-            </div>
+<section id="hero">
+    <div class="hero-container">
+        <div class="hero-left">
+            <img src="images/sahil-photo.jpg" alt="Sahil Walia" class="profile-photo">
+            <img src="images/signature.png" alt="Sahil's Signature" class="signature">
         </div>
-    </section>
+        <div class="hero-right">
+            <h1>Sahil Walia</h1>
+            <p>Business Analytics professional merging Business Intelligence with AI and Machine Learning solutions. Proven track record of leading innovative BI projects, crafting Tableau-based dashboards, and transforming data into actionable insights.</p>
+        </div>
+    </div>
+    <div class="circle large"></div>
+    <div class="circle small"></div>
+</section>
 
     <!-- Analytics Icons Section -->
-    <section id="analytics-icons">
-        <div class="icons-container">
-            <img src="images/icon-data.png" alt="Data" class="icon">
-            <img src="images/icon-chart.png" alt="Chart" class="icon">
-            <img src="images/icon-ai.png" alt="AI" class="icon">
-            <img src="images/icon-ml.png" alt="Machine Learning" class="icon">
+<section id="analytics-icons">
+    <div class="icons-container">
+        <div class="icon-box">
+            <img src="images/icons/icon_data_1.svg" alt="Data Icon">
+            <span class="tooltip">Data Analysis</span>
         </div>
-    </section>
+        <div class="icon-box">
+            <img src="images/icons/icon_chart_1.svg" alt="Chart Icon">
+            <span class="tooltip">Data Visualization</span>
+        </div>
+        <div class="icon-box">
+            <img src="images/icons/icon_ai_1.svg" alt="AI Icon">
+            <span class="tooltip">Artificial Intelligence</span>
+        </div>
+    </div>
+</section>
 
     <!-- Contact Section -->
-    <footer id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> | <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a></p>
-    </footer>
-
+<footer id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> | <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a></p>
+    <div class="social-icons">
+        <a href="https://github.com/walia-sahil" target="_blank"><img src="images/icons/github.svg" alt="GitHub"></a>
+        <a href="https://linkedin.com/in/sahilwalia" target="_blank"><img src="images/icons/linkedin.svg" alt="LinkedIn"></a>
+        <a href="mailto:swalia10@asu.edu"><img src="images/icons/email.svg" alt="Email"></a>
+    </div>
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
