--- a/index.html
+++ b/index.html
@@ -8,49 +8,30 @@
 </head>
 
 <body>
-    <!-- Navigation Menu -->
-    <nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="work-experience.html">Work Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact Me</a></li>
+            <li><a href="#my-story">My Story</a></li>
+            <li><a href="#work-experience">Work Experience</a></li>
+            <li><a href="#flagship-projects">Flagship Projects</a></li>
+            <li><a href="#contact">Get in Touch</a></li>
         </ul>
     </nav>
 
-    <!-- Hero Section with Photo, Signature, and Description -->
-<section id="hero">
-    <div class="hero-container">
-        <div class="hero-left">
-            <img src="images/sahil-photo.jpg" alt="Sahil Walia" class="profile-photo">
-            <img src="images/signature.png" alt="Sahil's Signature" class="signature">
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="hero-container">
+            <div class="hero-left">
+                <img src="images/sahil-photo.jpg" alt="Sahil Walia" class="profile-photo">
+                <h1>Sahil Walia</h1>
+                <p>Business Analytics professional merging Business Intelligence with AI and Machine Learning solutions. Proven track record of leading innovative BI projects at an enterprise level.</p>
+                <img src="images/signature.png" alt="Signature" class="signature">
+            </div>
+            <div class="hero-right">
+                <img src="images/illustration.png" alt="Analytics Illustration" class="illustration">
+            </div>
         </div>
-        <div class="hero-right">
-            <h1>Sahil Walia</h1>
-            <p>Business Analytics professional merging Business Intelligence with AI and Machine Learning solutions. Proven track record of leading innovative BI projects, crafting Tableau-based dashboards, and transforming data into actionable insights.</p>
-        </div>
-    </div>
-    <div class="circle large"></div>
-    <div class="circle small"></div>
-</section>
-
-    <!-- Analytics Icons Section -->
-<section id="analytics-icons">
-    <div class="icons-container">
-        <div class="icon-box">
-            <img src="images/icons/icon_data_1.svg" alt="Data Icon">
-            <span class="tooltip">Data Analysis</span>
-        </div>
-        <div class="icon-box">
-            <img src="images/icons/icon_chart_1.svg" alt="Chart Icon">
-            <span class="tooltip">Data Visualization</span>
-        </div>
-        <div class="icon-box">
-            <img src="images/icons/icon_ai_1.svg" alt="AI Icon">
-            <span class="tooltip">Artificial Intelligence</span>
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- Contact Section -->
 <footer id="contact">
