--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sahil Walia</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sahil Walia</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="#my-story">My Story</a></li>
-            <li><a href="#work-experience">Work Experience</a></li>
-            <li><a href="#flagship-projects">Flagship Projects</a></li>
-            <li><a href="#contact">Get in Touch</a></li>
-        </ul>
-    </nav>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">My Story</a></li>
+      <li><a href="#">Work Experience</a></li>
+      <li><a href="#">Flagship Projects</a></li>
+      <li><a href="#">Get in Touch</a></li>
+    </ul>
+  </nav>
 
-    <!-- Hero Section -->
-    <section id="hero">
-        <div class="hero-container">
-            <div class="hero-left">
-                <img src="images/sahil-photo.jpg" alt="Sahil Walia" class="profile-photo">
-                <h1>Sahil Walia</h1>
-                <p>Business Analytics professional merging Business Intelligence with AI and Machine Learning solutions. Proven track record of leading innovative BI projects at an enterprise level.</p>
-                <img src="images/signature.png" alt="Signature" class="signature">
-            </div>
-            <div class="hero-right">
-                <img src="images/illustration.png" alt="Analytics Illustration" class="illustration">
-            </div>
-        </div>
-    </section>
+  <!-- Hero Section -->
+  <section id="hero">
+    <!-- Angled Background Shape -->
+    <div class="angled-shape"></div>
 
-    <!-- Contact Section -->
-<footer id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> | <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a></p>
-    <div class="social-icons">
-        <a href="https://github.com/walia-sahil" target="_blank"><img src="images/icons/github.svg" alt="GitHub"></a>
-        <a href="https://linkedin.com/in/sahilwalia" target="_blank"><img src="images/icons/linkedin.svg" alt="LinkedIn"></a>
-        <a href="mailto:swalia10@asu.edu"><img src="images/icons/email.svg" alt="Email"></a>
+    <div class="hero-content">
+      <!-- Left Column: Profile + Text -->
+      <div class="hero-left">
+        <img src="images/profile.jpg" alt="Sahil Walia" class="profile-photo" />
+        <h1 class="hero-title">Sahil Walia</h1>
+        <p class="hero-description">
+          Business Analytics professional merging Business Intelligence with AI 
+          and Machine Learning solutions. Proven track record of leading 
+          innovative BI projects at an enterprise level.
+        </p>
+        <img src="images/signature.png" alt="Signature" class="signature" />
+      </div>
+
+      <!-- Right Column: Illustration -->
+      <div class="hero-right">
+        <img src="images/illustration.png" alt="Analytics Illustration" class="illustration" />
+      </div>
     </div>
-</footer>
-    <script src="script.js"></script>
+  </section>
 </body>
 </html>
 
