--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
       </div>
     </div>
   </section>
+  <!-- Contact Me Section -->
+  <footer id="contact-me">
+  <div class="contact-container">
+    <h2>Contact Me</h2>
+    <p>
+     Email: 
+     <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> 
+     | 
+     <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a>
+    </p>
+   </div>
+   </footer>
+
 </body>
 </html>
 
