Fix- Footer Contact me v2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="#">My Story</a></li>
       <li><a href="#">Work Experience</a></li>
       <li><a href="#">Flagship Projects</a></li>
-      <li><a href="#">Get in Touch</a></li>
+      <li><a href="#contact-me">Get in Touch</a></li>
     </ul>
   </nav>
 
@@ -24,7 +24,7 @@
     <div class="angled-shape"></div>
 
     <div class="hero-content">
-      <!-- Left Column: Profile + Text -->
+      <!-- Left Column: Photo + Text -->
       <div class="hero-left">
         <img src="images/profile.jpg" alt="Sahil Walia" class="profile-photo" />
         <h1 class="hero-title">Sahil Walia</h1>
@@ -42,19 +42,19 @@
       </div>
     </div>
   </section>
+
   <!-- Contact Me Section -->
   <footer id="contact-me">
-  <div class="contact-container">
-    <h2>Contact Me</h2>
-    <p>
-     Email: 
-     <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> 
-     | 
-     <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a>
-    </p>
-   </div>
-   </footer>
-
+    <div class="contact-container">
+      <h2>Contact Me</h2>
+      <p>
+        Email: 
+        <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> 
+        | 
+        <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a>
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
 
