--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sahil Walia</title>
-  <!-- Link to your CSS file -->
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -25,19 +24,16 @@
     <div class="angled-shape"></div>
 
     <div class="hero-content">
-      <!-- Left Column: Photo + Text -->
+      <!-- Left Column: Profile + Text -->
       <div class="hero-left">
         <img src="images/profile.jpg" alt="Sahil Walia" class="profile-photo" />
         <h1 class="hero-title">Sahil Walia</h1>
         <p class="hero-description">
-          Business Analytics professional merging Business Intelligence 
-          with AI and Machine Learning solutions. Proven track record 
-          of leading innovative BI projects at an enterprise level.
+          Business Analytics professional merging Business Intelligence with AI 
+          and Machine Learning solutions. Proven track record of leading 
+          innovative BI projects at an enterprise level.
         </p>
         <img src="images/signature.png" alt="Signature" class="signature" />
-
-        <!-- "Contact Me" button links down to footer section -->
-        <a href="#contact-me" class="contact-button">Contact Me</a>
       </div>
 
       <!-- Right Column: Illustration -->
@@ -52,10 +48,10 @@
     <div class="contact-container">
       <h2>Contact Me</h2>
       <p>
-        Work: 
-        <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a> 
-        | School: 
-        <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a>
+        Email: 
+        <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> 
+        | 
+        <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a>
       </p>
     </div>
   </footer>
