--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="#">My Story</a></li>
       <li><a href="#">Work Experience</a></li>
       <li><a href="#">Flagship Projects</a></li>
+      <!-- Link to #contact-me to jump down to the footer section -->
       <li><a href="#contact-me">Get in Touch</a></li>
     </ul>
   </nav>
@@ -29,11 +30,14 @@
         <img src="images/profile.jpg" alt="Sahil Walia" class="profile-photo" />
         <h1 class="hero-title">Sahil Walia</h1>
         <p class="hero-description">
-          Business Analytics professional merging Business Intelligence with AI 
-          and Machine Learning solutions. Proven track record of leading 
+          Business Analytics professional merging Business Intelligence with 
+          AI and Machine Learning solutions. Proven track record of leading 
           innovative BI projects at an enterprise level.
         </p>
         <img src="images/signature.png" alt="Signature" class="signature" />
+
+        <!-- Contact Me Button -->
+        <a href="#contact-me" class="contact-button">Contact Me</a>
       </div>
 
       <!-- Right Column: Illustration -->
@@ -43,17 +47,15 @@
     </div>
   </section>
 
-  <!-- Contact Me Section -->
+  <!-- Contact Me Section / Footer -->
   <footer id="contact-me">
-    <div class="contact-container">
-      <h2>Contact Me</h2>
-      <p>
-        Email: 
-        <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a> 
-        | 
-        <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a>
-      </p>
-    </div>
+    <h2>Contact Me</h2>
+    <p>
+      Work: 
+      <a href="mailto:sahilwalia2598@gmail.com">sahilwalia2598@gmail.com</a> 
+      | School: 
+      <a href="mailto:swalia10@asu.edu">swalia10@asu.edu</a>
+    </p>
   </footer>
 </body>
 </html>
