Added- Work Experience section

--- a/work-experience.html
+++ b/work-experience.html
@@ -1,46 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work Experience</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Work Experience - Sahil Walia</title>
+  <!-- Link your CSS file -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="work-experience.html">Work Experience</a></li>
-            <li><a href="#zs-associates">ZS Associates</a></li>
-            <li><a href="#honda-cars">Honda Cars India Limited</a></li>
-            <li><a href="#enigmatic-plodder">Enigmatic Plodder</a></li>
-        </ul>
-    </nav>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">My Story</a></li>
+      <li><a href="work-experience.html">Work Experience</a></li>
+      <li><a href="#">Flagship Projects</a></li>
+      <li><a href="#">Get in Touch</a></li>
+    </ul>
+  </nav>
 
-    <header>
-        <h1>Work Experience</h1>
-    </header>
+  <!-- Work Experience Section -->
+  <section class="experience-section">
+    <h1>Professional Experience</h1>
 
-    <section id="zs-associates">
+    <!-- First Experience -->
+    <div class="experience-item">
+      <div class="experience-header">
         <h2>ZS Associates</h2>
-        <p>I worked as a Decision Analytics Associate Consultant at ZS Associates, delivering data-driven insights to support strategic decision-making for clients in the healthcare domain.</p>
-    </section>
+        <span class="experience-year">2021 — 2024</span>
+      </div>
+      <p>
+        At ZS, I helped fortune 500 pharmaceutical organizations make smarter 
+        decisions by translating complex data into actionable insights. Using 
+        industry leading BI tools such as Tableau, SQL, and Python, I optimized 
+        clinical trials operations, tracked brand performance, and identified 
+        new market opportunities that were easy to adopt.
+      </p>
+      <p>
+        Leading Healthcare Consulting firm — 
+        <a href="#">Know More</a>
+      </p>
+    </div>
 
-    <section id="honda-cars">
-        <h2>Honda Cars India Limited</h2>
-        <p>As a Production Engineer Trainee, I contributed to lean manufacturing and Six Sigma optimization on the dashboard assembly line.</p>
-    </section>
-
-    <section id="enigmatic-plodder">
-        <h2>Motorsports - Enigmatic Plodder</h2>
-        <p>As the Motorsports Design and Corporate Lead, I led a team to develop an off-road quad bike from the ground up.</p>
-    </section>
-
-    <footer>
-        <h2>Contact Me</h2>
-        <p>Email: example@example.com</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <!-- Second Experience -->
+    <div class="experience-item">
+      <div class="experience-header">
+        <h2>Honda Cars India Ltd.</h2>
+        <span class="experience-year">2017 — 2021</span>
+      </div>
+      <p>
+        At Honda Cars India, I optimized the dashboard assembly line using 
+        lean manufacturing principles, cutting lead time and improving 
+        production efficiency. Collaborating with cross-functional teams, 
+        I applied Japanese production systems to streamline workflows and 
+        enhance operational performance.
+      </p>
+      <p>
+        Global Automotive Manufacturer — 
+        <a href="#">Know More</a>
+      </p>
+    </div>
+  </section>
 </body>
 </html>
+
