--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul>
-      <li><a href="#">My Story</a></li>
-      <li><a href="#">Work Experience</a></li>
+      <li><a href="index.html">My Story</a></li>
+      <li><a href="work-experience.html">Work Experience</a></li>
       <li><a href="#">Flagship Projects</a></li>
       <!-- Link to #contact-me to jump down to the footer section -->
       <li><a href="#contact-me">Get in Touch</a></li>
