--- a/work-experience.html
+++ b/work-experience.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Work Experience - Sahil Walia</title>
-  <!-- Link your CSS file -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -20,45 +19,62 @@
 
   <!-- Work Experience Section -->
   <section class="experience-section">
-    <h1>Professional Experience</h1>
+    <!-- Two-column container for text (left) and graphic (right) -->
+    <div class="experience-container">
 
-    <!-- First Experience -->
-    <div class="experience-item">
-      <div class="experience-header">
-        <h2>ZS Associates</h2>
-        <span class="experience-year">2021 — 2024</span>
-      </div>
-      <p>
-        At ZS, I helped fortune 500 pharmaceutical organizations make smarter 
-        decisions by translating complex data into actionable insights. Using 
-        industry leading BI tools such as Tableau, SQL, and Python, I optimized 
-        clinical trials operations, tracked brand performance, and identified 
-        new market opportunities that were easy to adopt.
-      </p>
-      <p>
-        Leading Healthcare Consulting firm — 
-        <a href="#">Know More</a>
-      </p>
-    </div>
+      <!-- Left Column: Title + Experience Items -->
+      <div class="experience-left">
+        <h1>Professional Experience</h1>
 
-    <!-- Second Experience -->
-    <div class="experience-item">
-      <div class="experience-header">
-        <h2>Honda Cars India Ltd.</h2>
-        <span class="experience-year">2017 — 2021</span>
+        <!-- First Experience -->
+        <div class="experience-item">
+          <div class="experience-header">
+            <h2>ZS Associates</h2>
+            <span class="experience-year">2021 — 2024</span>
+          </div>
+          <p>
+            At ZS, I helped fortune 500 pharmaceutical organizations make 
+            smarter decisions by translating complex data into actionable 
+            insights. Using industry leading BI tools such as Tableau, SQL, 
+            and Python, I optimized clinical trials operations, tracked 
+            brand performance, and identified new market opportunities 
+            that were easy to adopt.
+          </p>
+          <p>
+            Leading Healthcare Consulting firm — 
+            <a href="#">Know More</a>
+          </p>
+        </div>
+
+        <!-- Second Experience -->
+        <div class="experience-item">
+          <div class="experience-header">
+            <h2>Honda Cars India Ltd.</h2>
+            <span class="experience-year">2017 — 2021</span>
+          </div>
+          <p>
+            At Honda Cars India, I optimized the dashboard assembly line 
+            using lean manufacturing principles, cutting lead time and 
+            improving production efficiency. Collaborating with 
+            cross-functional teams, I applied Japanese production systems 
+            to streamline workflows and enhance operational performance.
+          </p>
+          <p>
+            Global Automotive Manufacturer — 
+            <a href="#">Know More</a>
+          </p>
+        </div>
+      </div> <!-- End .experience-left -->
+
+      <!-- Right Column: SVG Graphic -->
+      <div class="experience-right">
+        <!-- Adjust the src path if needed -->
+        <img src="images/graphic_data_4.svg" 
+             alt="Illustration" 
+             class="experience-graphic" />
       </div>
-      <p>
-        At Honda Cars India, I optimized the dashboard assembly line using 
-        lean manufacturing principles, cutting lead time and improving 
-        production efficiency. Collaborating with cross-functional teams, 
-        I applied Japanese production systems to streamline workflows and 
-        enhance operational performance.
-      </p>
-      <p>
-        Global Automotive Manufacturer — 
-        <a href="#">Know More</a>
-      </p>
-    </div>
+
+    </div> <!-- End .experience-container -->
   </section>
 </body>
 </html>
