Work Experience section v3

--- a/work-experience.html
+++ b/work-experience.html
@@ -69,7 +69,7 @@
       <!-- Right Column: SVG Graphic -->
       <div class="experience-right">
         <!-- Adjust the src path if needed -->
-        <img src="images/graphic_data_4.svg" 
+        <img src="images/icons/graphic_data_4.svg" 
              alt="Illustration" 
              class="experience-graphic" />
       </div>
