--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="index.html">My Story</a></li>
       <li><a href="work-experience.html">Work Experience</a></li>
-      <li><a href="#">Flagship Projects</a></li>
+      <li><a href="flagship-projects.html">Flagship Projects</a></li>
       <!-- Link to #contact-me to jump down to the footer section -->
       <li><a href="#contact-me">Get in Touch</a></li>
     </ul>
