--- a/work-experience.html
+++ b/work-experience.html
@@ -42,7 +42,7 @@
           </p>
           <p>
             Leading Healthcare Consulting firm — 
-            <a href="https://www.zs.com">Know More</a>
+            <a href="https://www.zs.com"> target="_blank" rel="noopener noreferrer">Know More</a>
           </p>
         </div>
 
@@ -50,7 +50,7 @@
         <div class="experience-item">
           <div class="experience-header">
             <h2>Honda Cars India Ltd.</h2>
-            <span class="experience-year">2017 — 2021</span>
+            <span class="experience-year">June-2017</span>
           </div>
           <p>
             At Honda Cars India, I optimized the dashboard assembly line 
@@ -61,7 +61,7 @@
           </p>
           <p>
             Global Automotive Manufacturer — 
-            <a href="https://www.hondacarindia.com">Know More</a>
+            <a href="https://www.hondacarindia.com"> target="_blank" rel="noopener noreferrer">Know More</a>
           </p>
         </div>
       </div> <!-- End .experience-left -->
