--- a/work-experience.html
+++ b/work-experience.html
@@ -42,7 +42,7 @@
           </p>
           <p>
             Leading Healthcare Consulting firm — 
-            <a href="https://www.zs.com"> target="_blank" rel="noopener noreferrer">Know More</a>
+            <a href="https://www.zs.com" target="_blank" rel="noopener noreferrer">Know More</a>
           </p>
         </div>
 
@@ -61,7 +61,7 @@
           </p>
           <p>
             Global Automotive Manufacturer — 
-            <a href="https://www.hondacarindia.com"> target="_blank" rel="noopener noreferrer">Know More</a>
+            <a href="https://www.hondacarindia.com" target="_blank" rel="noopener noreferrer">Know More</a>
           </p>
         </div>
       </div> <!-- End .experience-left -->
