--- a/work-experience.html
+++ b/work-experience.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="index.html">My Story</a></li>
       <li><a href="work-experience.html">Work Experience</a></li>
-      <li><a href="#">Flagship Projects</a></li>
+      <li><a href="flagship-projects.html">Flagship Projects</a></li>
       <li><a href="#">Get in Touch</a></li>
     </ul>
   </nav>
