Landing Page Timeline add v1

--- a/index.html
+++ b/index.html
@@ -46,6 +46,96 @@
       </div>
     </div>
   </section>
+<!-- Timeline Section -->
+<section id="timeline" class="timeline-section">
+  <h2 class="timeline-title">Key Milestones</h2>
+
+  <div class="timeline-wrapper">
+    <!-- 1. Birth -->
+    <div class="timeline-item">
+      <div class="timeline-left">
+        <h3>Birth</h3>
+      </div>
+      <div class="timeline-center">
+        <div class="timeline-node"></div>
+      </div>
+      <div class="timeline-right">
+        <h4>1998</h4>
+        <p>Alcon Public School, New Delhi, India</p>
+      </div>
+    </div>
+
+    <!-- 2. Primary & Secondary Education -->
+    <div class="timeline-item">
+      <div class="timeline-left">
+        <h3>Primary & Secondary Education</h3>
+      </div>
+      <div class="timeline-center">
+        <div class="timeline-node"></div>
+      </div>
+      <div class="timeline-right">
+        <h4>2008</h4>
+        <p>Alcon Public School, New Delhi, India</p>
+      </div>
+    </div>
+
+    <!-- 3. Bachelor's Degree -->
+    <div class="timeline-item">
+      <div class="timeline-left">
+        <h3>Bachelor's Degree</h3>
+      </div>
+      <div class="timeline-center">
+        <div class="timeline-node"></div>
+      </div>
+      <div class="timeline-right">
+        <h4>2016</h4>
+        <p>SRM Institute of Science & Technology, Tamil Nadu, India</p>
+      </div>
+    </div>
+
+    <!-- 4. Work Experience -->
+    <div class="timeline-item">
+      <div class="timeline-left">
+        <h3>Work Experience</h3>
+      </div>
+      <div class="timeline-center">
+        <div class="timeline-node"></div>
+      </div>
+      <div class="timeline-right">
+        <h4>2020 - 2021</h4>
+        <p>ZS Associates, New Delhi, India</p>
+      </div>
+    </div>
+
+    <!-- 5. Master's Degree -->
+    <div class="timeline-item">
+      <div class="timeline-left">
+        <h3>Master's Degree</h3>
+      </div>
+      <div class="timeline-center">
+        <div class="timeline-node"></div>
+      </div>
+      <div class="timeline-right">
+        <h4>2024</h4>
+        <p>W.P. Carey School of Business, Arizona State University, USA</p>
+      </div>
+    </div>
+
+    <!-- 6. Future Awaits -->
+    <div class="timeline-item">
+      <div class="timeline-left">
+        <h3>Future Awaits</h3>
+      </div>
+      <div class="timeline-center">
+        <div class="timeline-node"></div>
+      </div>
+      <div class="timeline-right">
+        <h4>2025</h4>
+        <p>Stay Tuned</p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Contact Me Section / Footer -->
   <footer id="contact-me">
