--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="timeline-right">
         <h4>1998</h4>
-        <p>Alcon Public School, New Delhi, India</p>
+        <p>India</p>
       </div>
     </div>
 
@@ -74,8 +74,8 @@
         <div class="timeline-node"></div>
       </div>
       <div class="timeline-right">
-        <h4>2008</h4>
-        <p>Alcon Public School, New Delhi, India</p>
+        <h4>2002-2016</h4>
+        <p>Ahlcon Public School, New Delhi, India</p>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
         <div class="timeline-node"></div>
       </div>
       <div class="timeline-right">
-        <h4>2016</h4>
+        <h4>2016-2020</h4>
         <p>SRM Institute of Science & Technology, Tamil Nadu, India</p>
       </div>
     </div>
@@ -102,7 +102,7 @@
         <div class="timeline-node"></div>
       </div>
       <div class="timeline-right">
-        <h4>2020 - 2021</h4>
+        <h4>2021 - 2024</h4>
         <p>ZS Associates, New Delhi, India</p>
       </div>
     </div>
@@ -116,7 +116,7 @@
         <div class="timeline-node"></div>
       </div>
       <div class="timeline-right">
-        <h4>2024</h4>
+        <h4>2024-2025</h4>
         <p>W.P. Carey School of Business, Arizona State University, USA</p>
       </div>
     </div>
@@ -130,7 +130,7 @@
         <div class="timeline-node"></div>
       </div>
       <div class="timeline-right">
-        <h4>2025</h4>
+        <h4>2025-Beyond</h4>
         <p>Stay Tuned</p>
       </div>
     </div>
