--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <style>
 /* ================= CSS Variables ================= */
+/* ================= CSS Variables ================= */
 :root {
   /* Core brand colors */
   --primary-purple: #7c3aed;
@@ -25,33 +26,27 @@
   --accent-purple: #8b5cf6;
   --accent-blue: #60a5fa;
   
-  /* Light theme backgrounds */
+  /* Light theme (default) */
   --bg-primary: #ffffff;
   --bg-secondary: #f8fafc;
   --bg-card: rgba(255, 255, 255, 0.9);
   --bg-card-hover: rgba(248, 250, 252, 0.95);
-  
-  /* Light theme text */
   --text-primary: #1e293b;
   --text-secondary: #475569;
   --text-muted: #64748b;
-  
-  /* Light theme borders and effects */
   --border-color: rgba(226, 232, 240, 0.8);
   --border-hover: rgba(124, 58, 237, 0.2);
   --nav-bg: rgba(255, 255, 255, 0.85);
   --nav-border: rgba(226, 232, 240, 0.8);
+  --gradient-card: linear-gradient(135deg, rgba(124, 58, 237, 0.05) 0%, rgba(59, 130, 246, 0.05) 100%);
+  --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.05);
+  --shadow-md: 0 8px 24px rgba(0, 0, 0, 0.08);
+  --shadow-lg: 0 20px 40px rgba(0, 0, 0, 0.12);
   
   /* Gradients */
   --gradient-primary: linear-gradient(135deg, #7c3aed 0%, #3b82f6 100%);
   --gradient-secondary: linear-gradient(135deg, #a78bfa 0%, #60a5fa 100%);
   --gradient-text: linear-gradient(135deg, #7c3aed 0%, #3b82f6 50%, #8b5cf6 100%);
-  --gradient-card: linear-gradient(135deg, rgba(124, 58, 237, 0.05) 0%, rgba(59, 130, 246, 0.05) 100%);
-  
-  /* Shadows */
-  --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.05);
-  --shadow-md: 0 8px 24px rgba(0, 0, 0, 0.08);
-  --shadow-lg: 0 20px 40px rgba(0, 0, 0, 0.12);
   
   /* Layout constants */
   --nav-height: 72px;
