--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
   /* Light theme (default) */
   --bg-primary: #ffffff;
   --bg-secondary: #f8fafc;
-  --bg-card: rgba(255, 255, 255, 0.9);
-  --bg-card-hover: rgba(248, 250, 252, 0.95);
+  --bg-card: rgba(255, 255, 255, 0.95);
+  --bg-card-hover: rgba(248, 250, 252, 0.98);
   --text-primary: #1e293b;
   --text-secondary: #475569;
   --text-muted: #64748b;
   --border-color: rgba(226, 232, 240, 0.8);
-  --border-hover: rgba(124, 58, 237, 0.2);
-  --nav-bg: rgba(255, 255, 255, 0.85);
-  --nav-border: rgba(226, 232, 240, 0.8);
-  --gradient-card: linear-gradient(135deg, rgba(124, 58, 237, 0.05) 0%, rgba(59, 130, 246, 0.05) 100%);
-  --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.05);
-  --shadow-md: 0 8px 24px rgba(0, 0, 0, 0.08);
-  --shadow-lg: 0 20px 40px rgba(0, 0, 0, 0.12);
+  --border-hover: rgba(124, 58, 237, 0.3);
+  --nav-bg: rgba(255, 255, 255, 0.95);
+  --nav-border: rgba(226, 232, 240, 0.6);
+  --gradient-card: linear-gradient(135deg, rgba(124, 58, 237, 0.03) 0%, rgba(59, 130, 246, 0.03) 100%);
+  --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.04);
+  --shadow-md: 0 8px 24px rgba(0, 0, 0, 0.06);
+  --shadow-lg: 0 20px 40px rgba(0, 0, 0, 0.08);
   
   /* Gradients */
   --gradient-primary: linear-gradient(135deg, #7c3aed 0%, #3b82f6 100%);
@@ -56,7 +56,7 @@
   --transition-slow: 500ms ease;
 }
 
-/* Dark theme */
+/* Dark theme - only applied when explicitly set */
 [data-theme="dark"] {
   --bg-primary: #0f0f1a;
   --bg-secondary: #1a1a2e;
@@ -141,9 +141,9 @@ body {
   z-index: -1;
   background: var(--bg-primary);
   background-image: 
-    radial-gradient(circle at 20% 50%, rgba(124, 58, 237, 0.1) 0%, transparent 50%),
-    radial-gradient(circle at 80% 20%, rgba(59, 130, 246, 0.1) 0%, transparent 50%),
-    radial-gradient(circle at 40% 80%, rgba(139, 92, 246, 0.05) 0%, transparent 50%);
+    radial-gradient(circle at 20% 50%, rgba(124, 58, 237, 0.08) 0%, transparent 50%),
+    radial-gradient(circle at 80% 20%, rgba(59, 130, 246, 0.08) 0%, transparent 50%),
+    radial-gradient(circle at 40% 80%, rgba(139, 92, 246, 0.04) 0%, transparent 50%);
 }
 
 /* ================= Skip Link ================= */
@@ -264,7 +264,7 @@ body {
 
 .theme-toggle {
   background: var(--bg-secondary);
-  border: none;
+  border: 1px solid var(--border-color);
   border-radius: 20px;
   width: 44px;
   height: 24px;
@@ -292,6 +292,7 @@ body {
 
 [data-theme="dark"] .theme-toggle {
   background: var(--primary-purple);
+  border-color: var(--primary-purple);
 }
 
 [data-theme="dark"] .theme-toggle-slider {
@@ -1270,23 +1271,15 @@ section {
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* Light theme as system preference default - only applies when no data-theme is set */
+@media (prefers-color-scheme: light) {
   :root {
-    --bg-primary: #0f0f1a;
-    --bg-secondary: #1a1a2e;
-    --bg-card: rgba(26, 26, 46, 0.6);
-    --bg-card-hover: rgba(26, 26, 46, 0.8);
-    --text-primary: #f8f9ff;
-    --text-secondary: #c3c8e3;
-    --text-muted: #8b92b9;
-    --border-color: rgba(167, 139, 250, 0.1);
-    --border-hover: rgba(167, 139, 250, 0.3);
-    --nav-bg: rgba(15, 15, 26, 0.8);
-    --nav-border: rgba(167, 139, 250, 0.1);
-    --gradient-card: linear-gradient(135deg, rgba(124, 58, 237, 0.1) 0%, rgba(59, 130, 246, 0.1) 100%);
-    --shadow-sm: 0 2px 8px rgba(124, 58, 237, 0.1);
-    --shadow-md: 0 8px 24px rgba(124, 58, 237, 0.15);
-    --shadow-lg: 0 20px 40px rgba(124, 58, 237, 0.2);
+    /* Ensure light theme variables are maintained */
+    --bg-primary: #ffffff;
+    --bg-secondary: #f8fafc;
+    --text-primary: #1e293b;
+    --text-secondary: #475569;
+    --text-muted: #64748b;
   }
 }
 </style>
