--- a/index.html
+++ b/index.html
@@ -1336,11 +1336,10 @@ section {
               <span>View My Work</span>
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M5 12h14m-7-7l7 7-7 7"/></svg>
             </a>
-            <a href="./documents/Sahil_Walia_Resume.pdf" download class="btn btn-secondary">
-              <span>Download Resume</span>
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m7-5l5 5m0 0l5-5m-5 5V3"/></svg>
-            </a>
-          </div>
+           <a href="./Sahil Walia - Resume.pdf" download class="btn btn-secondary">
+  <span>Download Resume</span>
+  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m7-5l5 5m0 0l5-5m-5 5V3"/></svg>
+</a>
 
           <div class="stats-bar fade-in" aria-label="Key stats">
             <div class="stat-item"><div class="stat-number">3.5+</div><div class="stat-label">Years Experience</div></div>
