--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@ section {
   <div class="container">
     <div class="hero-content">
       <div class="hero-image">
-        <img src="https://via.placeholder.com/180x180/7C3AED/ffffff?text=SW" alt="Portrait of Sahil Walia" loading="eager" />
+       <img src="./images/Profile%20pic%20framed.png" alt="Portrait of Sahil Walia" loading="eager" />
       </div>
       
       <div class="hero-badge fade-in">Graduate • Open to Opportunities</div>
