--- a/index.html
+++ b/index.html
@@ -458,6 +458,8 @@ section {
   height: 180px;
   border-radius: 50%;
   border: 4px solid var(--border-color);
+  object-fit: cover;
+  object-position: center;
   transition: all var(--transition-base);
 }
 
@@ -1197,10 +1199,13 @@ section {
   }
 }
 
-@media (max-width: 480px) {
-  .hero-image img {
-    width: 140px;
-    height: 140px;
+  @media (max-width: 480px) {
+    .hero-image img {
+      width: 140px;
+      height: 140px;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
   .hero-title {
